Various scroll bar fixes for non-Mac platforms (a.k.a. we forgot 'overflow: auto' exists)

--- a/frontend/src/components/columnar_selector/columnar_selector.css
+++ b/frontend/src/components/columnar_selector/columnar_selector.css
@@ -9,7 +9,7 @@
     min-width: 180px;
     min-height: 300px;
     max-height: 340px;
-    overflow-y: scroll;
+    overflow-y: auto;
     flex: 1;
 }
 
