--- a/frontend/src/components/modal/modal.css
+++ b/frontend/src/components/modal/modal.css
@@ -26,7 +26,7 @@
   outline: none;
 
   max-height: 90%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .Modal.Modal--small {
